Ozhaev Zaynudin Sharik5.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:242:0: error: unterminated argument list invoking macro "RGB"
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:46:63: error: 'RGB' was not declared in this scope
                   RGB(rand() % 35, rand() % 35, rand() % 35), RGB((rand() % 35, rand() % 35, rand() % 35) };
                                                               ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:46:63: error: expected '}' at end of input
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:46:63: error: expected ',' or ';' at end of input
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:43:10: warning: unused variable 'ball1' [-Wunused-variable]
     Ball ball1 = { rand() % W,  rand() % H,
          ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:46:63: error: expected '}' at end of input
                   RGB(rand() % 35, rand() % 35, rand() % 35), RGB((rand() % 35, rand() % 35, rand() % 35) };
                                                               ^
---------------------------------------------------------------------------------------------
[11.06.2021 12:40:57,78 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
